# dsa_backend

./: .eraserdiagram  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  docker-compose-deploy.yml  docker-compose.yml  pyproject.toml  rename.pkl  setup.sh  sort.pkl  training_data.pkl
.github/workflows/: standard.yml
db/: chroma.sqlite3
docs/: .eraserdiagram
src/api/: README.md  main.py  server.py
src/api/models/: schemas.py
src/app/api/: PDFSearchTool_gpt-3.5-turbo_log.txt  main.py
src/cli/: dsa.py
src/common/: docsort.py  helper.py
src/dsa/: __init__.py  action.py  agent.py  agents.py  crews.py  entrypoint.py  gradio_entrypoint.py  reader.py  streamlit_entrypoint.py  streamtest.py  task.py  tasks.py  trainer.py
src/legacy/: tools.py  trainer.py
src/lib/: __init__.py  crews.py  tools.py
src/lib/config/: agents.yaml  tasks.yaml
src/ui/: README.md  entrypoint.py  gradio_entrypoint.py  streamlit_entrypoint.py
tests/: dsa_test.py  test_docsort.py
