[build-system]
requires = ["setuptools >= 57.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "document_sorting_assistant"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.11"
readme = "README.md"
authors = [ { name = "Louis", email = "louis.dalonis@gmail.com"}]

dependencies = [
  "langchain-community",
  "langchain-openai",
  "faiss-cpu",
  "crewai",
  "crewai-tools",
  "pydantic",
  "docling",
  "accelerate"
]

[project.optional-dependencies]
ci = ["black", "coverage", "pylint", "flake8"]
cd = ["twine"]
fastapi = ["fastapi", "uvicorn"]
streamlit = ["streamlit"]
gradio = ["gradio"]

[project.scripts]
suggest_filename = "cli.dsa:suggest_filename"
suggest_filedirectory = "cli.dsa:suggest_filedirectory"

[tool.black]
line-length = 79


[tool.flake8]
# Ignore invalid escape sequence warnings
ignore = ["W605"]
# Exclude third-party libraries from checks
exclude = [
    ".git",
    "__pycache__",
    ".venv*",
    "*.egg",
    "build",
    "dist"
]
max-line-length = 79
