[build-system]
requires = ["setuptools >= 57.0", "wheel" ]
build-backend = "setuptools.build_meta"

[project]
name = "dsa_backend"
version = "0.1.0"
description = "Project description"
requires-python = ">=3.11"
readme = "README.md"
authors = [ { name = "Louis", email = "louis.dalonis@gmail.com"}]

dependencies = [
  "langchain-community",
  "langchain-openai",
  "faiss-cpu",
  "crewai",
  "crewai-tools",
  "pydantic",
  "docling",
  "accelerate",
  "boto3" # required for FileReadTool
]

[project.optional-dependencies]
dev = ["black", "flake8", "pytest", "coverage", "pylint"]
fastapi = ["fastapi", "uvicorn", "python-multipart"]
streamlit = ["streamlit"]
gradio = ["gradio"]

[project.scripts]
suggest_filename = "cli.dsa:suggest_filename"
suggest_directory = "cli.dsa:suggest_directory"
run_api = "api.server:run"
run_ui = "ui.streamlit_entrypoint:main"

[tool.black]
line-length = 79


[tool.flake8]
# Ignore invalid escape sequence warnings
ignore = ["W605"]
# Exclude third-party libraries from checks
exclude = [
    ".git",
    "__pycache__",
    ".venv*",
    "*.egg",
    "build",
    "dist"
]
max-line-length = 79
